completed till file upload

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
-      <h1> Codeial / Profile Page</h1> 
+<img src="<%= user.avatar %>" alt="<%= user.name %>" width="100"> 
 
 
             <p><%= profile_user.name %></p>
@@ -10,9 +10,11 @@
             <% if(user.id == profile_user.id){ %>
                   <!-- if user matches show foem else only rpofile info -->
                   
-                  <form action="/users/update/<%= profile_user.id %>" method="POST">
+                  <form action="/users/update/<%= profile_user.id %>" method="POST" enctype="multipart/form-data">
                         <input type="text" name="name" placeholder="Your name" value="<%= profile_user.name %>" required>
                         <input type="text" name="email" placeholder="Your email" value="<%= profile_user.email %>" required>
+
+                        <input type="file" name="avatar" placeholder="Profile Holder">
                         <input type="submit" name="submit">
                   </form>
             <%}else{%>
